# Kaori-Spa

./: .gitignore  CLAUDE.md  CLIENT WEBSITE .html  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  workflows.html
.github/workflows/: build-images.yml  ci.yml
apps/branch-admin/: .gitignore  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts
apps/client-mobile/: README.md  capacitor.config.ts  package.json
apps/client-web/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/org-admin/: package.json  (+2 more)
docs/: architecture.md  booking-engine.md  data-model.md  dependencies.md  dev-setup.md  developer-guide.html  i18n.md  llm-chatbot.md  observability.md  pricing.md  rbac.md  realtime.md  roadmap.md  scaling.md  security.md  testing.md
quan-ly-chi-nhanh/: check-in.html  index.html
quan-ly-tenant/: bao-cao-phan-tich.html  cai-dat-to-chuc.html  domain-url.html  goi-dang-ky.html  index.html  lich-su-truy-cap.html  thanh-vien.html  thuong-hieu.html  tich-hop.html  tinh-nang.html  tong-quan-tenant.html
quan-ly-to-chuc/: bao-cao-chi-nhanh.html  cau-hinh-dich-vu.html  chi-nhanh.html  chi-tiet-chi-nhanh.html  danh-sach-vai-tro.html  gan-vai-tro.html  index.html  kiem-tra-quyen.html  ma-tran-quyen.html  noi-dung-chi-nhanh.html  noi-dung-cong-ty.html  tao-sua-vai-tro.html  vai-tro-quyen-han.html
services/: README.md  build.gradle.kts  settings.gradle.kts
services/ai-service/: .env.example  README.md  pyproject.toml
services/ai-service/src/kaori_ai/: config.py  main.py
services/ai-service/src/kaori_ai/gateway/: __init__.py  cache.py  llm.py  providers.py  types.py
services/ai-service/src/kaori_ai/routers/: chat.py  recommend.py  translate.py
services/analytics-service/: pyproject.toml
services/analytics-service/src/kaori_analytics/: main.py
tools/: i18n-check.mjs
(+585 files in other folders)
