[tool.poetry]
name = "kaori-ai"
version = "0.1.0"
description = "Kaori AI service — chatbot, LLM gateway, recommendations, translations"
authors = ["Kaori Platform <dev@kaorispa.io>"]
readme = "README.md"
packages = [{ include = "kaori_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
redis = "^5.1.1"
httpx = "^0.27.2"
tenacity = "^9.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-json-logger = "^2.0.7"
langchain = "^0.3.4"
langchain-anthropic = "^0.2.3"
langchain-openai = "^0.2.2"

[tool.poetry.group.db]
optional = true

[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.35"
asyncpg = "^0.30.0"
pgvector = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
respx = "^0.21.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
