[tool.poetry]
name = "kaori-analytics"
version = "0.1.0"
description = "Kafka → ClickHouse ETL for Kaori analytics"
authors = ["Kaori Platform <dev@kaorispa.io>"]
packages = [{ include = "kaori_analytics", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.11.0"
clickhouse-connect = "^0.7.19"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
prometheus-client = "^0.21.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
